[package]
name = "uncertainty-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
screenshots = "0.8.2"
image = "0.24.7"
enigo = "0.1.2"
dialoguer = { version = "0.10.4", default-features = false, features = ["history"] }
speedy = "0.8.6"
inputbot = "0.6.0"
